Fix the mobile scroll bar margin with overflow-x hidden on the body element, hack fix but it works for the time being.

--- a/resources/sass/landing/_sections.scss
+++ b/resources/sass/landing/_sections.scss
@@ -366,6 +366,12 @@ h4.contact-heading {
     padding-bottom: 30px;
 }
 
+.contact.noheading {
+    @include media-breakpoint-down(md) {
+        padding-top: 15px;
+    }
+}
+
 .footer-copyright {
     background: #3e3e3e;
     font-size: 13px;
